--- a/src/react/mapa.css
+++ b/src/react/mapa.css
@@ -1,8 +1,12 @@
-#svg-map path { fill:#0094d9 }
+
 #svg-map text { fill:#fff; font:12px Arial-BoldMT, sans-serif; cursor:pointer }
 #svg-map a{ text-decoration:none }
+#svg-map a path { fill: #bdbdbd  }
 #svg-map a:hover { cursor:pointer; text-decoration:none;}
 #svg-map a:hover path{ fill:#003399 !important }
+/* Path quando selecioando */
+#svg-map a.uf-selected path{ fill:#0689c5!important }
+
 #svg-map .circle { fill:#66ccff; border: solid 2px red}
 #svg-map a:hover .circle { fill:#003399 !important; cursor:pointer }
 
