--- a/src/react/cidades.css
+++ b/src/react/cidades.css
@@ -6,15 +6,66 @@
     box-sizing: border-box;
     width: 100%; height: 100%;
     flex-grow: 1;
+    padding: 4px;
 }
 
 .cidade-page-container > section{
-   /*  border: solid 3px rgb(9, 226, 63); */
+    display: flex;
+    flex-direction:column;
+    align-items: flex-start;
+    padding: 4px;
 }
 
+/* first */
+.cidade-page-container > section:nth-child(1){
+    flex-direction:column;
+}
+
+/* search bar */
+.cidade-page-container-search-bar{
+    width:100%; flex-direction:row;
+    border: solid 1px #ddd;
+}
+
+.cidade-page-container-search-bar > input{
+   width: 100%;
+   height: 35px;
+}
+
+/* second */
 .cidade-page-container > section:nth-child(2){
     overflow-y: scroll;
+    border: solid 1px #ccc
 }
+
+/* terceiro */
+.cidade-page-container > section:nth-child(3){
+    flex-direction: row;
+    align-items: center;
+}
+
+
+.cidade-page-container > section:nth-child(3) > button{
+    margin-right: 0; margin-left: auto;
+    padding: 12px 22px;
+    background-color: rgb(22, 107, 218);
+    border-radius: 4px;
+    border: none;
+    color: white;
+    font-weight: bold
+}
+
+.cidade-page-container > section:nth-child(3) > button:hover{
+    cursor: pointer;
+    background-color: rgb(42, 122, 226);
+}
+
+
+
+    
+
+
+
 
 
 /* .cidades-container .cidades-container-flow{
