--- a/src/react/style.css
+++ b/src/react/style.css
@@ -1,7 +1,6 @@
 /* Componente glboal */
 .react-fck-br-location-selector{
-    width: fit-content; height: fit-content;
-    border: solid 1px #aaa;
+    width: 100%; height: fit-content;
     border-radius: 4px;
     overflow: hidden;
 }
@@ -13,7 +12,8 @@
 /* carousel */
 .react-fck-br-location-selector-carousel-frame{
     background-color: rgb(243, 243, 243);
-    width: 550px; height: 550px;
+    width: 100%; height: 550px;
+    min-width: 550px;
 }
 
 @media screen and (max-width: 756px){
