--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,26 +1,56 @@
-/* Componente glboal */
-.react-fck-br-location-selector{
-    width: 100%; height: fit-content;
-    border-radius: 4px;
-    overflow: hidden;
+@keyframes turnAround{
+    0% { transform: rotateY(180deg) ;  opacity: 0;  };
+    100% {  transform: rotateY(0) ; opacity: 1; }
 }
 
-.react-fck-br-location-selector, .react-fck-br-location-selector * {
+@keyframes placeHolderShimmer {
+    0% { background-position: -30vw 0 }
+    100% { background-position: 100vw 0 }
+}
+
+.table-forms, .table-forms *{
     box-sizing: border-box;
 }
-
-/* carousel */
-.react-fck-br-location-selector-carousel-frame{
-    background-color: rgb(243, 243, 243);
-    width: 100%; height: 550px;
-    min-width: 550px;
+  
+.table-forms{
+    position: relative; width: 100%;
+    animation-name: turnAround; animation-duration: .15s;
+    height: 420px;
+    overflow: scroll;
 }
 
-@media screen and (max-width: 756px){
-    .react-fck-br-location-selector{
-        width: 100%;
-    }
-    .react-fck-br-location-selector-carousel-frame{
-        width: 100%;
-    }
+/* .table-forms::-webkit-scrollbar {
+    width: 8px;height: 8px;
+    background: rgb(153, 153, 153);    
+    border: solid 1px #ddd;    
+    border-radius: 4px;      
+} */
+
+/* grid aqui */
+.table-forms > section.mform-grid {
+    position: absolute; top: 0; left: 0;
+    width: fit-content; height: fit-content;
+    min-width: 100%;
+    display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;
+    background-color: rgba(255, 255, 255, 0.322);
+}
+/* freeze */
+.table-forms.freeze {
+    position: relative;
+}
+
+.table-forms.freeze::after {
+    content: "";
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%;
+    border-radius: 6px;
+    animation-duration: 1.8s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background-size: 100%;
+    opacity: .6;
 }
