--- a/src/styles/header-row.css
+++ b/src/styles/header-row.css
@@ -1,22 +1,25 @@
 
 /* HEADER  */
-.mform-header{ 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif!important;
+.mform-row.mform-header{ 
     position: sticky; top: 0; z-index: 1;
-    background-color: rgb(85, 85, 85);
     width: 100%;
-    color: white;
-    text-shadow: 0px 1px 2px #333;
-    box-shadow: inset 0px 0px 3px #333333!important;
+    background-color: rgb(145, 145, 145);
+    display: grid; grid-template-columns: 16px 44px 1fr 44px 16px; 
 } 
 
-.mform-header > section:nth-child(3) > div {
-    height: 42px!important;
+.mform-row.mform-header > section {
+   
+} 
+
+.mform-row.mform-header > section:nth-child(3) > div {
+    height: 38px!important;
     text-transform: uppercase;
     line-height: 1em;
     font-size: 15px;font-weight: bold;
     display: flex; align-items: center;justify-content: center;
     text-align: center;
     overflow: hidden;
-    box-shadow: inset 0px 0px 2px #444!important;
+    color: black;
+    background-color: unset;
+    
 } 
