--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,16 +1,16 @@
-
+/* 
 @keyframes placeHolderShimmer {
     0% { background-position: -30vw 0 }
     100% { background-position: 100vw 0 }
 }
-
+ */
 .table-forms, .table-forms *{
     box-sizing: border-box;
 }
   
 .table-forms{
     position: relative; width: 100%;
-    height: 460px;
+    height: 450px;
     overflow: scroll;
 }
 
@@ -20,14 +20,14 @@
     width: fit-content; height: fit-content;
     min-width: 100%;
     display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;
-    background-color: rgba(255, 255, 255, 0.322);
+    background-color: rgb(255, 255, 255);
 }
 /* freeze */
 .table-forms.freeze {
     position: relative;
 }
 
-.table-forms.freeze::after {
+/* .table-forms.freeze::after {
     content: "";
     position: absolute; top: 0; left: 0;
     width: 100%; height: 100%;
@@ -41,4 +41,4 @@
     background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
     background-size: 100%;
     opacity: .6;
-}
+} */
