--- a/src/styles/table-row.css
+++ b/src/styles/table-row.css
@@ -4,7 +4,7 @@
     display: grid; grid-template-columns: 16px 44px 1fr 44px 16px; 
     grid-template-rows: 1fr;
     background-color: rgb(243, 243, 243);
-    border-radius: 4px;
+    border-radius: 3px;
     padding: 2px;
     border: solid 1px #eee;
     overflow: hidden;
@@ -58,8 +58,7 @@
     transition: all .1s;
     border: solid 1px #ccc;
     border: none;
-    border-radius:50%;
-    background-color: white;
+    box-shadow: inset 0px 1px 2px #0003;
 }
 
 .mform-row > section > button:hover::after{
